monitoria/mac323/4-2-35/grades/Isabela-Blucher_191477_assignsubmission_file_CoreVertices.java.txt

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-35/tester/checker/checker' is up to date.
CoreVertices.java:23: error: no suitable constructor found for Digraph(In)
		G = new Digraph(in);	
		    ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
1 error
=========== TENTANDO COMPILAR DE NOVO (imports no começo do código) ==============
CoreVertices.java:24: error: no suitable constructor found for Digraph(In)
		G = new Digraph(in);	
		    ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
1 error
